# sample-wasm-component-model

./: .gitignore  Cargo.toml  README.md
adder/: Cargo.toml
adder/src/: bindings.rs  lib.rs
calculator/: Cargo.toml
calculator/src/: bindings.rs  lib.rs
src/: bindings.rs  main.rs
subtractor/: Cargo.toml
subtractor/src/: bindings.rs  lib.rs
wit/: world.wit
wit/adder/: world.wit
wit/calculator/: world.wit
wit/subtractor/: world.wit
