[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.32.0", features = ["bitflags"] }
clap = { version = "4.5.18", features = ["derive"] }
anyhow = "1.0.89"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:app"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit"
world = "app"

[package.metadata.component.target.dependencies]
"component:calculator" = { path = "wit/calculator" }
"component:adder" = { path = "wit/adder" }
"component:subtractor" = { path = "wit/subtractor" }
